--- a/cmake/Step5/CMakeLists.txt
+++ b/cmake/Step5/CMakeLists.txt
@@ -40,25 +40,7 @@ install(FILES "${PROJECT_BINARY_DIR}/TutorialConfig.h"
   )
 
 
-# TODO 5: Enable testing
-
-# TODO 6: Add a test called Runs which runs the following command:
-# $ Tutorial 25
-
-# TODO 7: Add a test called Usage which runs the following command:
-# $ Tutorial
-# Make sure the expected output is displayed.
-# Hint: Use the PASS_REGULAR_EXPRESSION property with "Usage.*number"
-
-# TODO 8: Add a test which runs the following command:
-# $ Tutorial 4
-# Make sure the result is correct.
-# Hint: Use the PASS_REGULAR_EXPRESSION property with "4 is 2"
-
-# TODO 9: Add more tests. Create a function called do_test to avoid copy +
-# paste. Test the following values: 4, 9, 5, 7, 25, -25 and 0.0001.
-enable_testing()
-
+enable_testing() # test
 add_test(NAME Runs COMMAND Tutorial 25)
 
 add_test(NAME Usage COMMAND Tutorial)
@@ -71,6 +53,7 @@ set_tests_properties(StandardUse
   PROPERTIES PASS_REGULAR_EXPRESSION "4 is 2"
   )
 
+if (1) #{{
 function(do_test target arg result)
   add_test(NAME Comp${arg} COMMAND ${target} ${arg})
   set_tests_properties(Comp${arg}
@@ -87,3 +70,4 @@ do_test(Tutorial 25 "25 is 5")
 do_test(Tutorial -25 "-25 is (-nan|nan|0)")
 do_test(Tutorial 0.0001 "0.0001 is 0.01")
 
+endif() #}}
