--- a/cmake/Step8/MathFunctions/CMakeLists.txt
+++ b/cmake/Step8/MathFunctions/CMakeLists.txt
@@ -5,10 +5,16 @@ option(USE_MYMATH "Use tutorial provided math implementation" ON)
 if (USE_MYMATH)
   target_compile_definitions(MathFunctions PRIVATE "USE_MYMATH")
 
-  # library that just does sqrt
+  include(MakeTable.cmake) # generates Table.h
+
   add_library(SqrtLibrary STATIC
               mysqrt.cxx
+              ${CMAKE_CURRENT_BINARY_DIR}/Table.h   # Table.h 를 추가해 줌 
               )
+
+# target_include_directories(SqrtLibrary PRIVATE
+#                            ${CMAKE_CURRENT_BINARY_DIR}  # include 경로에도 추가함
+#                            )
 
   # link SqrtLibrary to tutorial_compiler_flags
   target_link_libraries(SqrtLibrary PUBLIC tutorial_compiler_flags)
@@ -31,29 +37,22 @@ if (USE_MYMATH)
   " HAVE_EXP)
 
   # add compile definitions
-  if(HAVE_LOG AND HAVE_EXP)
-    target_compile_definitions(SqrtLibrary
-                               PRIVATE "HAVE_LOG" "HAVE_EXP"
-                               )
-  endif()
+# if(HAVE_LOG AND HAVE_EXP)
+#   target_compile_definitions(SqrtLibrary PRIVATE "HAVE_LOG" "HAVE_EXP")
+# endif()
 
   target_link_libraries(MathFunctions PRIVATE SqrtLibrary)
 endif()
 
-# state that anybody linking to us needs to include the current source dir
-# to find MathFunctions.h, while we don't.
 target_include_directories(MathFunctions
                            INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}
                            )
 
-# link MathFunctions to tutorial_compiler_flags
 target_link_libraries(MathFunctions PUBLIC tutorial_compiler_flags)
 
-# install libs
 set(installable_libs MathFunctions tutorial_compiler_flags)
 if(TARGET SqrtLibrary)
   list(APPEND installable_libs SqrtLibrary)
 endif()
 install(TARGETS ${installable_libs} DESTINATION lib)
-# install include headers
 install(FILES MathFunctions.h DESTINATION include)
