--- a/cmake/Step3/MathFunctions/CMakeLists.txt
+++ b/cmake/Step3/MathFunctions/CMakeLists.txt
@@ -1,27 +1,33 @@
+message(STATUS ">> start of MathFunctions")
+# step2.ex1
+# add_library(MathFunctions MathFunctions.cxx mysqrt.cxx)
+# step2.ex2
 add_library(MathFunctions MathFunctions.cxx)
 
-# TODO 1: State that anybody linking to MathFunctions needs to include the
-# current source directory, while MathFunctions itself doesn't.
-# Hint: Use target_include_directories with the INTERFACE keyword
-message(STATUS "CMAKE_CURRENT_SOURCE_DIR -->: ${CMAKE_CURRENT_SOURCE_DIR}")
+# step3.ex1
+message(STATUS "CMAKE_CURRENT_SOURCE_DIR ==> ${CMAKE_CURRENT_SOURCE_DIR}")
 target_include_directories(MathFunctions
-                           INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}
-                           )
+    INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}
+    )
 
-# should we use our own math functions
+# step2.ex2
 option(USE_MYMATH "Use tutorial provided math implementation" ON)
 if (USE_MYMATH)
   target_compile_definitions(MathFunctions PRIVATE "USE_MYMATH")
-
-  # library that just does sqrt
   add_library(SqrtLibrary STATIC
               mysqrt.cxx
               )
 
-  # target_link_libraries(MathFunctions PRIVATE SqrtLibrary)
+  # step2.ex2
+  #target_link_libraries(MathFunctions PRIVATE SqrtLibrary)
+
+  # step3.ex2
   target_link_libraries(SqrtLibrary PUBLIC tutorial_compiler_flags)
   target_link_libraries(MathFunctions PRIVATE SqrtLibrary)
 endif()
 
+# step3.ex2
 target_link_libraries(MathFunctions PUBLIC tutorial_compiler_flags)
+message(STATUS "tutorial_compiler_flags ==> ${tutorial_compiler_flags}")
 
+message(STATUS "<< end of MathFunctions")
