--- a/cmake/Step3/CMakeLists.txt
+++ b/cmake/Step3/CMakeLists.txt
@@ -1,30 +1,33 @@
+# step1.ex1
 cmake_minimum_required(VERSION 3.10)
-
 project(Tutorial VERSION 1.0)
+add_executable(Tutorial tutorial.cxx)
+message(STATUS "==> hello cmake step1")
 
-# TODO 4: Replace the following code by:
-# * Creating an interface library called tutorial_compiler_flags
-#   Hint: use add_library() with the INTERFACE signature
-# * Add compiler feature cxx_std_11 to tutorial_compiler_flags
-#   Hint: Use target_compile_features()
-
+# step1.ex2 - step3
 #set(CMAKE_CXX_STANDARD 11)
 #set(CMAKE_CXX_STANDARD_REQUIRED True)
+
+# step3
 add_library(tutorial_compiler_flags INTERFACE)
 target_compile_features(tutorial_compiler_flags INTERFACE cxx_std_11)
 
-configure_file(TutorialConfig.h.in TutorialConfig.h)
+# step1.ex3
+configure_file( TutorialConfig.h.in  TutorialConfig.h )
 
+# step2 - step3.ex2
 add_subdirectory(MathFunctions)
-#delete# list(APPEND EXTRA_INCLUDES "${PROJECT_SOURCE_DIR}/MathFunctions")
-
-add_executable(Tutorial tutorial.cxx)
-
-# target_link_libraries(Tutorial PUBLIC MathFunctions)
+#target_link_libraries(Tutorial PUBLIC MathFunctions)
 target_link_libraries(Tutorial PUBLIC MathFunctions tutorial_compiler_flags)
 
+# step3.ex1
+#delete# list(APPEND EXTRA_INCLUDES "${PROJECT_SOURCE_DIR}/MathFunctions")
+message(STATUS "EXTRA_INCLUDES ==> ${EXTRA_INCLUDES}")
+message(STATUS "PROJECT_BINARY_DIR ==> ${PROJECT_BINARY_DIR}")
+
+# step1.ex3 - step2 - step3.ex1
 target_include_directories(Tutorial PUBLIC
-    "${PROJECT_BINARY_DIR}"
-# ${EXTRA_INCLUDES}
-    )
+   "${PROJECT_BINARY_DIR}"
+#  ${EXTRA_INCLUDES}
+   )
 
