--- a/cmake/Step4/CMakeLists.txt
+++ b/cmake/Step4/CMakeLists.txt
@@ -1,48 +1,50 @@
-
-cmake_minimum_required(VERSION 3.15)
-
+# step1.ex1
+cmake_minimum_required(VERSION 3.10)
 project(Tutorial VERSION 1.0)
+add_executable(Tutorial tutorial.cxx)
+message(STATUS "==> hello cmake step1")
 
+# step1.ex2 - step3
+#set(CMAKE_CXX_STANDARD 11)
+#set(CMAKE_CXX_STANDARD_REQUIRED True)
+
+# step3
 add_library(tutorial_compiler_flags INTERFACE)
 target_compile_features(tutorial_compiler_flags INTERFACE cxx_std_11)
 
-# TODO 2: Create helper variables to determine which compiler we are using:
-# * Create a new variable gcc_like_cxx that is true if we are using CXX and
-#   any of the following compilers: ARMClang, AppleClang, Clang, GNU, LCC
-# * Create a new variable msvc_cxx that is true if we are using CXX and MSVC
-# Hint: Use set() and COMPILE_LANG_AND_ID
+# step4
 set(gcc_like_cxx "$<COMPILE_LANG_AND_ID:CXX,ARMClang,AppleClang,Clang,GNU,LCC>")
 set(msvc_cxx "$<COMPILE_LANG_AND_ID:CXX,MSVC>")
+message(STATUS "gcc_like_cxx ==> ${gcc_like_cxx}")
 
-
-# TODO 3: Add warning flag compile options to the interface library
-# tutorial_compiler_flags.
-# * For gcc_like_cxx, add flags -Wall;-Wextra;-Wshadow;-Wformat=2;-Wunused
-# * For msvc_cxx, add flags -W3
-# Hint: Use target_compile_options()
+# step4
 #target_compile_options(tutorial_compiler_flags INTERFACE
 #  "$<${gcc_like_cxx}:-Wall;-Wextra;-Wshadow;-Wformat=2;-Wunused>"
-#  "$<${msvc_cxx}:-W3>"
+#  "$<${msvc_cxx}:$<BUILD_INTERFACE:-W3>>"
 #)
-
-# TODO 4: With nested generator expressions, only use the flags for the build-tree
-# Hint: Use BUILD_INTERFACE
 target_compile_options(tutorial_compiler_flags INTERFACE
   "$<${gcc_like_cxx}:$<BUILD_INTERFACE:-Wall;-Wextra;-Wshadow;-Wformat=2;-Wunused>>"
   "$<${msvc_cxx}:$<BUILD_INTERFACE:-W3>>"
 )
+message(STATUS "tutorial_compiler_flags ==> ${tutorial_compiler_flags}")
 
-configure_file(TutorialConfig.h.in TutorialConfig.h)
+# step1.ex3
+configure_file( TutorialConfig.h.in  TutorialConfig.h )
 
+# step2 - step3.ex2
 add_subdirectory(MathFunctions)
-
-add_executable(Tutorial tutorial.cxx)
-
+#target_link_libraries(Tutorial PUBLIC MathFunctions)
 target_link_libraries(Tutorial PUBLIC MathFunctions tutorial_compiler_flags)
 
-target_include_directories(Tutorial PUBLIC
-                           "${PROJECT_BINARY_DIR}"
-                           )
+# step3.ex1
+#delete# list(APPEND EXTRA_INCLUDES "${PROJECT_SOURCE_DIR}/MathFunctions")
+message(STATUS "EXTRA_INCLUDES ==> ${EXTRA_INCLUDES}")
+message(STATUS "PROJECT_BINARY_DIR ==> ${PROJECT_BINARY_DIR}")
 
-message(STATUS "gcc_like_cxx -->: ${gcc_like_cxx}")
+# step1.ex3 - step2 - step3.ex1
+target_include_directories(Tutorial PUBLIC
+   "${PROJECT_BINARY_DIR}"
+#  ${EXTRA_INCLUDES}
+   )
+
 
