--- a/meson/hello/meson.build
+++ b/meson/hello/meson.build
@@ -1,2 +1,24 @@
 project('tutorial', 'c')
 executable('demo', 'main.c')
+
+#my_var = 'Hello, Meson!'
+#message('The value of my_var is:', my_var)
+
+#number = 42
+#message('The answer is @0@'.format(number))
+
+#my_list = ['a', 'b', 'c']
+#message('My list contains: @0@'.format(my_list))
+
+#complex_var = {'key': 'value'}
+#message('Complex var: @0@'.format(complex_var.get('key', 'not found')))
+
+#any_var = [1, 2, {'a': 'b'}]
+#message('Debug output: ' + str(any_var))
+
+#py_mod = import('python')
+#python = py_mod.find_installation('python3')
+#result = run_command(python, '-c', 'import sys; print(repr(sys.argv[1]))', check: true)
+#message('Python repr: ' + result.stdout().strip())
+
+
